--- a/css/_query.scss
+++ b/css/_query.scss
@@ -13,7 +13,7 @@
     .logo{
         width: 80%!important;
         left: 10%!important;
-        top: 5%!important;
+        top: 2%!important;
     }
 
     small{
@@ -22,6 +22,7 @@
 
     svg{
         width: 100%!important;
+        transform: scale(1.5);
     }
 
     .txtBox{
