christmas first commit

--- a/css/_query.scss
+++ b/css/_query.scss
@@ -1,4 +1,5 @@
 @media screen and (max-width:1000px) {
+
     .contCont{
         width: 80%!important;
         .cont{
@@ -47,3 +48,9 @@
         }
     }
 }
+
+// @media screen and (min-width:1001px) {
+//     body{
+//         justify-content: center;
+//     }
+// }
