--- a/css/_struct.scss
+++ b/css/_struct.scss
@@ -343,8 +343,12 @@
     &-img{
         background-image: url('../img/bg.png');
         background-size: cover;
-        background-repeat: repeat;
-        background-position: center;
+        background-repeat: no-repeat;
+    }
+	&-img2{
+        background-image: url('../img/cat/bg.png');
+        background-size: cover;
+        background-repeat: no-repeat;
     }
     &-drk{
         background-color: $drk;
