--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&family=Mountains+of+Christmas:wght@700&display=swap');
 @import "_var";
 @import "query";
 @import "_struct";
@@ -18,6 +18,10 @@
         font-family: $mont;
         font-weight: 900;
     }
+}
+.chrst{
+  font-family: $chris;
+  font-weight: 700;
 }
 
 .bot{
