--- a/css/styles.css
+++ b/css/styles.css
@@ -12,16 +12,18 @@
   .logo {
     width: 80% !important;
     left: 10% !important;
-    top: 5% !important;
+    top: 2% !important;
   }
   small {
     width: 100% !important;
   }
   svg {
     width: 100% !important;
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
   }
   .txtBox {
-    height: 45% !important;
+    height: 50% !important;
   }
   .lucky {
     width: 10% !important;
@@ -712,6 +714,7 @@ small {
 .pl-bl {
   position: absolute;
   bottom: 0;
+  left: 0;
 }
 
 .pl-br {
@@ -723,8 +726,8 @@ small {
 .txtBox {
   position: absolute;
   bottom: 0;
-  -webkit-animation: up 1s ease-in-out;
-          animation: up 1s ease-in-out;
+  -webkit-animation: up .5s ease-in-out;
+          animation: up .5s ease-in-out;
 }
 
 @keyframes up {
