--- a/css/styles.scss
+++ b/css/styles.scss
@@ -77,6 +77,7 @@ small {
     &-bl{
         position: absolute;
         bottom: 0;
+        left: 0;
     }
     &-br{
         position: absolute;
@@ -88,7 +89,7 @@ small {
 .txtBox{
     position: absolute;
     bottom: 0;
-    animation: up 1s ease-in-out;
+    animation: up .5s ease-in-out;
 }
 
 @keyframes up {
