--- a/css/_var.scss
+++ b/css/_var.scss
@@ -1,4 +1,8 @@
 $light:#A6F2FF;
 $drk:#447692;
 $wht:white;
-$mont:'Montserrat', sans-serif;
+$grad1:linear-gradient(91.75deg, #941EF1 0%, #421985 100%);
+$grad2:linear-gradient(268.93deg, #D735FF 0.02%, #8730C4 48.42%, #322A86 99.95%);
+$grad3:linear-gradient(226.21deg, #D035FB 0%, #3C2B8D 102.21%);
+$ama:'Amarante', cursive;
+$lato:'Lato', sans-serif;
