--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,27 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amarante&family=Lato:wght@300&display=swap');
 @import "_var";
 @import "query";
 @import "_struct";
 @import "_def";
 
 /* font style */
-.mont{
-    &-reg{
-        font-family: $mont;
-        font-weight: 400;
-    }
-    &-bld{
-        font-family: $mont;
-        font-weight: 700;
-    }
-    &-blk{
-        font-family: $mont;
-        font-weight: 900;
-    }
+.ama{
+  font-family: $ama;
+}
+
+.lato{
+  font-family: $lato;
 }
 
 .bot{
     bottom: 0;
+}
+
+.top{
+  width: 5%;
+  z-index: 2;
+  transition: .5s ease-in-out;
+}
+
+.spinner{
+  animation: down .5s;
 }
 
 svg{
@@ -184,19 +187,19 @@ small {
       transform: rotate(3109deg);
     }
     90% {
-      -webkit-transform: rotate(6314deg);
-      -ms-transform: rotate(6314deg);
-      transform: rotate(6314deg);
+      -webkit-transform: rotate(5095deg);
+      -ms-transform: rotate(5095deg);
+      transform: rotate(5095deg);
     }
     95% {
-      -webkit-transform: rotate(6312deg);
-      -ms-transform: rotate(6312deg);
-      transform: rotate(6312deg);
+      -webkit-transform: rotate(5084deg);
+      -ms-transform: rotate(5084deg);
+      transform: rotate(5084deg);
     }
     100% {
-      -webkit-transform: rotate(6313deg);
-      -ms-transform: rotate(6313deg);
-      transform: rotate(6313deg);
+      -webkit-transform: rotate(5085deg);
+      -ms-transform: rotate(5085deg);
+      transform: rotate(5085deg);
     }
   }
   .spinAround3 {
@@ -217,21 +220,90 @@ small {
       transform: rotate(0deg);
     }
     90% {
-      -webkit-transform: rotate(1805deg);
-      -ms-transform: rotate(1805deg);
-      transform: rotate(1805deg);
+      -webkit-transform: rotate(5600deg);
+      -ms-transform: rotate(5600deg);
+      transform: rotate(5600deg);
     }
     95% {
-      -webkit-transform: rotate(1799deg);
-      -ms-transform: rotate(1799deg);
-      transform: rotate(1799deg);
+      -webkit-transform: rotate(5579deg);
+      -ms-transform: rotate(5579deg);
+      transform: rotate(5579deg);
     }
     100% {
-      -webkit-transform: rotate(1800deg);
-      -ms-transform: rotate(1800deg);
-      transform: rotate(1800deg);
+      -webkit-transform: rotate(5580deg);
+      -ms-transform: rotate(5580deg);
+      transform: rotate(5580deg);
     }
   }
+
+  .spinAround4 {
+    -webkit-animation: spin4 6.6s;
+    animation-timing-function: ease;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+  }
+  @-webkit-keyframes spin4 {
+    0% {
+      -webkit-transform: rotate(2109deg);
+      -ms-transform: rotate(2109deg);
+      transform: rotate(2109deg);
+    }
+    90% {
+      -webkit-transform: rotate(4105deg);
+      -ms-transform: rotate(4105deg);
+      transform: rotate(4105deg);
+    }
+    95% {
+      -webkit-transform: rotate(4094deg);
+      -ms-transform: rotate(4094deg);
+      transform: rotate(4094deg);
+    }
+    100% {
+      -webkit-transform: rotate(4095deg);
+      -ms-transform: rotate(4095deg);
+      transform: rotate(4095deg);
+    }
+  }
+
+  .spinAround5 {
+    -webkit-animation: spin5 6.6s;
+    animation-timing-function: ease;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+  }
+  @-webkit-keyframes spin5 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    90% {
+      -webkit-transform: rotate(3610deg);
+      -ms-transform: rotate(3610deg);
+      transform: rotate(3610deg);
+    }
+    95% {
+      -webkit-transform: rotate(3599deg);
+      -ms-transform: rotate(3599deg);
+      transform: rotate(3599deg);
+    }
+    100% {
+      -webkit-transform: rotate(3600deg);
+      -ms-transform: rotate(3600deg);
+      transform: rotate(3600deg);
+    }
+  }  
+
   .animated {
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
@@ -239,69 +311,3 @@ small {
     animation-fill-mode: both;
   }
 
-  .spinAround2 {
-    -webkit-animation: spin2 6.6s;
-    animation-timing-function: ease;
-    animation-iteration-count: 1;
-    animation-direction: normal;
-    -webkit-animation-fill-mode: forwards;
-    -moz-animation-fill-mode: forwards;
-    -o-animation-fill-mode: forwards;
-    -ms-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-  }
-  @-webkit-keyframes spin2 {
-    0% {
-      -webkit-transform: rotate(3109deg);
-      -ms-transform: rotate(3109deg);
-      transform: rotate(3109deg);
-    }
-    90% {
-      -webkit-transform: rotate(6400deg);
-      -ms-transform: rotate(6400deg);
-      transform: rotate(6400deg);
-    }
-    95% {
-      -webkit-transform: rotate(6389deg);
-      -ms-transform: rotate(6389deg);
-      transform: rotate(6389deg);
-    }
-    100% {
-      -webkit-transform: rotate(6390deg);
-      -ms-transform: rotate(6390deg);
-      transform: rotate(6390deg);
-    }
-  }
-  .spinAround3 {
-    -webkit-animation: spin3 6.6s;
-    animation-timing-function: ease;
-    animation-iteration-count: 1;
-    animation-direction: normal;
-    -webkit-animation-fill-mode: forwards;
-    -moz-animation-fill-mode: forwards;
-    -o-animation-fill-mode: forwards;
-    -ms-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-  }
-  @-webkit-keyframes spin3 {
-    0% {
-      -webkit-transform: rotate(3109deg);
-      -ms-transform: rotate(3109deg);
-      transform: rotate(3109deg);
-    }
-    90% {
-      -webkit-transform: rotate(6310deg);
-      -ms-transform: rotate(6310deg);
-      transform: rotate(6310deg);
-    }
-    95% {
-      -webkit-transform: rotate(6299deg);
-      -ms-transform: rotate(6299deg);
-      transform: rotate(6299deg);
-    }
-    100% {
-      -webkit-transform: rotate(6300deg);
-      -ms-transform: rotate(6300deg);
-      transform: rotate(6300deg);
-    }
-  }
