--- a/css/styles.css
+++ b/css/styles.css
@@ -675,6 +675,20 @@ span {
   bottom: 0;
 }
 
+.sound {
+  top: 2%;
+  right: 2%;
+}
+
+.cursor {
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+}
+
+.cursor:hover {
+  cursor: pointer;
+}
+
 .top {
   width: 5%;
   z-index: 2;
